// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all api types 1`] = `
Object {
  "API_RESPONSE_CREDENTIALS_COUNT": "count",
  "API_RESPONSE_CREDENTIALS_RESULTS": "results",
  "API_RESPONSE_JOBS_RESULTS": "results",
  "API_RESPONSE_SCANS_COUNT": "count",
  "API_RESPONSE_SCANS_RESULTS": "results",
  "API_RESPONSE_SOURCES_COUNT": "count",
  "API_RESPONSE_SOURCES_RESULTS": "results",
  "API_SOURCE_CREDENTIALS": "credentials",
  "API_SOURCE_HOSTS": "hosts",
  "API_SOURCE_NAME": "name",
  "API_SOURCE_PORT": "port",
  "API_SOURCE_SAT_VERSION": "satellite_version",
  "API_SOURCE_SSL_CERT": "ssl_cert_verify",
  "API_SOURCE_SSL_DISABLE": "disable_ssl",
  "API_SOURCE_SSL_PROTOCOL": "ssl_protocol",
  "API_SOURCE_TYPE": "source_type",
  "apiTypes": Object {
    "API_RESPONSE_CREDENTIALS_COUNT": "count",
    "API_RESPONSE_CREDENTIALS_RESULTS": "results",
    "API_RESPONSE_JOBS_RESULTS": "results",
    "API_RESPONSE_SCANS_COUNT": "count",
    "API_RESPONSE_SCANS_RESULTS": "results",
    "API_RESPONSE_SOURCES_COUNT": "count",
    "API_RESPONSE_SOURCES_RESULTS": "results",
    "API_SOURCE_CREDENTIALS": "credentials",
    "API_SOURCE_HOSTS": "hosts",
    "API_SOURCE_NAME": "name",
    "API_SOURCE_PORT": "port",
    "API_SOURCE_SAT_VERSION": "satellite_version",
    "API_SOURCE_SSL_CERT": "ssl_cert_verify",
    "API_SOURCE_SSL_DISABLE": "disable_ssl",
    "API_SOURCE_SSL_PROTOCOL": "ssl_protocol",
    "API_SOURCE_TYPE": "source_type",
  },
  "default": Object {
    "API_RESPONSE_CREDENTIALS_COUNT": "count",
    "API_RESPONSE_CREDENTIALS_RESULTS": "results",
    "API_RESPONSE_JOBS_RESULTS": "results",
    "API_RESPONSE_SCANS_COUNT": "count",
    "API_RESPONSE_SCANS_RESULTS": "results",
    "API_RESPONSE_SOURCES_COUNT": "count",
    "API_RESPONSE_SOURCES_RESULTS": "results",
    "API_SOURCE_CREDENTIALS": "credentials",
    "API_SOURCE_HOSTS": "hosts",
    "API_SOURCE_NAME": "name",
    "API_SOURCE_PORT": "port",
    "API_SOURCE_SAT_VERSION": "satellite_version",
    "API_SOURCE_SSL_CERT": "ssl_cert_verify",
    "API_SOURCE_SSL_DISABLE": "disable_ssl",
    "API_SOURCE_SSL_PROTOCOL": "ssl_protocol",
    "API_SOURCE_TYPE": "source_type",
  },
}
`;

exports[`specific types 1`] = `
Object {
  "API_RESPONSE_CREDENTIALS_COUNT": "count",
  "API_RESPONSE_CREDENTIALS_RESULTS": "results",
  "API_RESPONSE_JOBS_RESULTS": "results",
  "API_RESPONSE_SCANS_COUNT": "count",
  "API_RESPONSE_SCANS_RESULTS": "results",
  "API_RESPONSE_SOURCES_COUNT": "count",
  "API_RESPONSE_SOURCES_RESULTS": "results",
  "API_SOURCE_CREDENTIALS": "credentials",
  "API_SOURCE_HOSTS": "hosts",
  "API_SOURCE_NAME": "name",
  "API_SOURCE_PORT": "port",
  "API_SOURCE_SAT_VERSION": "satellite_version",
  "API_SOURCE_SSL_CERT": "ssl_cert_verify",
  "API_SOURCE_SSL_DISABLE": "disable_ssl",
  "API_SOURCE_SSL_PROTOCOL": "ssl_protocol",
  "API_SOURCE_TYPE": "source_type",
}
`;
